--- a/src/assets/icons/_icon-styles.scss
+++ b/src/assets/icons/_icon-styles.scss
@@ -1,5 +1,5 @@
 @import "variables";
-$base-url:'src/sass/icons/';
+$base-url:'../icons/';
 @font-face {
   font-family: '#{$icomoon-font-family}';
   src:  url('#{$base-url}/#{$icomoon-font-path}/#{$icomoon-font-family}.eot?kp53a7');
