--- a/src/sass/base/_paths.scss
+++ b/src/sass/base/_paths.scss
@@ -1,4 +1,4 @@
-$root-path: "src";
+$root-path: "..";
 $fonts-root-path:$root-path +"/fonts";
 /*Fonts*/
 $arabic-font-base: $fonts-root-path + "/NeoSansArabic";
