--- a/src/sass/components/_catalog-card.scss
+++ b/src/sass/components/_catalog-card.scss
@@ -1,6 +1,7 @@
 .products-catalog-container{
     width: 49.438rem;
-    height: 36.75rem;
+    // height: 36.75rem;
+    height: auto;
     background-color: $light-purple;
     border-radius: .5rem;
     margin-#{$default-float}: 1.125rem;
