--- a/src/sass/pages/_about-portal.scss
+++ b/src/sass/pages/_about-portal.scss
@@ -4,7 +4,7 @@
     &:after{
         content: '';
         display: block;
-        background:url('../src/assets/images/about-shapes-bg.svg') ;
+        background:url('../images/about-shapes-bg.svg') ;
         height: 44.313rem;
         width: 47vw;
         position: absolute;
