--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -8,7 +8,7 @@ footer{
     top: 0;
     bottom: -10%;
     background-repeat: no-repeat !important;
-    background: url('../src/assets/images/footer.svg');
+    background: url('../images/footer.svg');
     position: absolute;
     top: 0;
     z-index: -1;
