fixing sliders issue when switch lang

--- a/src/app/catalog-slider/catalog-slider.component.html
+++ b/src/app/catalog-slider/catalog-slider.component.html
@@ -1,5 +1,5 @@
-<section class="Ca-slide-block">
-    <div class="catalog-swiper-container">
+<section class="Ca-slide-block" >
+    <div class="catalog-swiper-container" dir="rtl">
       <ul class="swiper-wrapper Ca-slide_list">
         <li class="swiper-slide Ca-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="0">
           <!--data-swiper-autoplay -->
