--- a/src/app/footer-slider/footer-slider.component.html
+++ b/src/app/footer-slider/footer-slider.component.html
@@ -1,5 +1,5 @@
 <section class="ag-slide-block">
-    <div class="footer-swiper-container">
+    <div class="footer-swiper-container" dir="rtl">
       <ul class="swiper-wrapper ag-slide_list">
         <li class="swiper-slide ag-slide_item" data-swiper-autoplay="1500" data-swiper-slide-index="0">
           <!--data-swiper-autoplay -->
