--- a/src/app/muilt-rows-slider/muilt-rows-slider.component.html
+++ b/src/app/muilt-rows-slider/muilt-rows-slider.component.html
@@ -1,6 +1,6 @@
 
   
-  <div class="swiper-container industries-slider">
+  <div class="swiper-container industries-slider" dir="rtl">
         <div class="swiper-wrapper">
            
         <div class="swiper-slide">
