--- a/src/assets/css/style-ltr.css
+++ b/src/assets/css/style-ltr.css
@@ -7040,7 +7040,7 @@ body {
   .input-form .select-arrow {
     position: absolute;
     bottom: 0;
-    right: 0;
+    right: 2.5rem;
     top: 2.5rem; }
     .input-form .select-arrow::before {
       color: #919191; }
@@ -7180,7 +7180,8 @@ body {
   .search-result-card--md {
     height: 20.896rem;
     padding: 0.75rem;
-    border-radius: .5rem; }
+    border-radius: .5rem;
+    width: 102%; }
     .search-result-card--md .search-result-card-image-container {
       height: 18.75rem;
       width: 18.75rem;
@@ -7469,7 +7470,8 @@ body {
 
 .Ca-slide_list.swiper-wrapper {
   margin-bottom: 0;
-  margin-left: -2rem; }
+  margin-left: -2rem;
+  margin-right: -2.5rem; }
 
 .Ca-slide-block .swiper-container {
   padding-top: 13px; }
@@ -7528,7 +7530,7 @@ body {
 
 .Ca-swiper-button-next {
   margin-right: 43.5rem;
-  left: -3rem; }
+  left: -2rem; }
 
 .Ca-swiper-button-prev {
   left: -49rem; }
