--- a/src/sass/components/_info-card.scss
+++ b/src/sass/components/_info-card.scss
@@ -91,6 +91,7 @@
         height: 20.896rem;
         padding: 0.75rem;
         border-radius: .5rem;
+        width: 102%;
         .search-result-card-image-container{
             height: 18.75rem;
             width:18.75rem;
