set new Angular Arch v1.

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,5 +1,5 @@
-
-
+<!-- <app-navbar></app-navbar> -->
+<layout [FooterSilder]="true">
   <!--slider-->
   <slides-carousel></slides-carousel> 
 
@@ -89,51 +89,6 @@
 <section class="section-header-container">
     <h3 class="headers-txt headers-txt--black">{{'sponsors' | translate}}</h3>
 </section>
-
-
-<!--Footer-->
-<footer>
-    <!--slider-->
-   
-    <footer-slider></footer-slider>
-    <!--fixed backgroud-->
-    <div class="footer--bg"></div>
-   <!--footer logo-->
-   <hr class="custom-line">
-    <div class="footer-logo-container ">
-        <img src="../assets/images/Footer-logo.png" class="footer-logo">
-    </div>
-    <!--Footer Site map -->
-    <div class="site-map-container ">
-        <ul class="site-map-list">
-            <li class="site-map-tab"><a href="#">{{'homePage' | translate}}</a></li>
-            <li class="site-map-tab"><a href="#">{{'About' | translate}} </a></li>
-            <li class="site-map-tab"><a href="#">{{'IndustrialDepartments' | translate}}</a></li>
-            <li class="site-map-tab"><a href="#">{{'sponsors' | translate}}</a></li>
-            <li class="site-map-tab"><a href="#">{{'AddFactory' | translate}}</a></li>
-            <li class="site-map-tab"><a href="#">{{'ContactUs'| translate}}</a></li>
-        </ul>
-    </div> 
-    <!--Footer Contact info-->
-     <div class="contacts-container">
-        <ul class="contacts-list">
-            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-whatsapp"> </span>+</li>
-            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-fax"></span>+ </li>
-            <li class="contact-link">974-55754954<span class="contact-icon icon-Icon-phone-alt"></span>+</li>
-            <li class="contact-link">info@madeinqatar.qa<span class="contact-icon icon-Icon-env"></span></li>
-        </ul>
-    </div>
-    <!--social-media icons-->
-     <div class="socialMedia-container">
-        <ul class="socialMedia-list">
-            <li class="socialMedia-icon"><span class="icon-Icon-instagram"></span></li>
-            <li class="socialMedia-icon"><span class="icon-Icon-facebook"></span></li>
-            <li class="socialMedia-icon"><span class="icon-Icon-twitter"></span></li>
-            <li class="socialMedia-icon"><span class="icon-Icon-youtube"></span></li>
-        </ul>
-    </div>
-    <!--copyRight-->
-     <div class="copy-rights-container">
-        <span class="copy-rihts-txt">{{'copyRights' | translate}} </span>
-    </div>
-</footer> 
+</layout>
+<!-- 
+<app-footer></app-footer> -->
