--- a/src/app/pages/contact-us/contact-us.component.html
+++ b/src/app/pages/contact-us/contact-us.component.html
@@ -1,14 +1,10 @@
 <layout [FooterSilder]="false">
 
-  <!---------------------------------------------- Pages Shared Bannrr Details----------------------->
-<div class="page-banner">
-    <div class="page-banner-container">
-        <div class="page-banner-content-container">
-            <img class="page-banner__image" src="../assets/images/c1.jpg">
-            <h2 class="page-banner__header">{{'ContactUs' | translate}}</h2>
-        </div>
-    </div>
-</div>
+<!---------------------------------------------- Pages Shared Bannrr Details----------------------->
+<banner [imageSrc]="'../assets/images/c1.jpg'" >
+    {{'ContactUs' | translate}}
+</banner>
+
 
 <!--Contact Us Form-->
 <section class="Contact-us">
