--- a/src/app/pages/factory-details/factory-details.component.html
+++ b/src/app/pages/factory-details/factory-details.component.html
@@ -1,13 +1,9 @@
 <layout [FooterSilder]="false">
   <!---------------------------------------------- Pages Shared Bannrr Details----------------------->
-<div class="page-banner">
-    <div class="page-banner-container">
-        <div class="page-banner-content-container">
-            <img class="page-banner__image" src="../assets/images/c1.jpg">
-            <h2 class="page-banner__header">{{'IndustrialDepartments'|translate}}</h2>
-        </div>
-    </div>
-</div>
+ <banner [imageSrc]="'../assets/images/c1.jpg'" >
+     {{'IndustrialDepartments'|translate}} 
+  
+ </banner>  
 <!-----------------------------------------sixth page Factory Details sector------------------------>
 <section class="factory-details">
     <div class="container">
