--- a/src/assets/css/style-rtl.css
+++ b/src/assets/css/style-rtl.css
@@ -4134,6 +4134,7 @@ button.close {
 .carousel-inner {
   position: relative;
   width: 100%;
+  height: 100%;
   overflow: hidden; }
 
 .carousel-item {
@@ -6786,6 +6787,7 @@ body {
     display: none; } }
 
 .bs-big-carousel {
+height: 100%;
   margin-bottom: 2.063rem;
   position: relative; }
   .bs-big-carousel .big-carousel-image {
