about page BE done

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -11,10 +11,10 @@
 
 <!--Made in UAE info section-->
 <section class="site-guide">
-    <div class="container">
+    <div class="container" *ngIf="AboutUs">
         <div class="row">
             <div class="uae-info-header-container">
-                <h3 class="uae-info-header-txt">دليل صنع فى الامارات</h3>
+                <h3 class="uae-info-header-txt">{{getLang()=='ar'?AboutUs.nameAr:AboutUs.name}}</h3>
             </div>
         </div>
         <div class="row">
@@ -22,14 +22,8 @@
              
                <div class="uae-info-paragraph-container">
                    <p class="uae-info-paragraph-txt">
-                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
-                    <br>
-                    <br>
-                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
-                    <br>
-                    <br>
-                    يوفر معلومات موثقة ولمحه كاملة عن التصنيع والمنتجات بطريقة عمليه وبالتالى تمكين الصناعيين والمصنعين لتحقيق النمو واهداف التنمية وتعزيز المنتجات فى السوق الجديدة. كما يتضمن الدليل بيان كامل عن المشروعات القطرية ومنتجات المصانع مصنفة سلعيا وقوائم بالمصانع مقسمة بالقطاع بالإضافة الى التعريف بالقطاع الداعم للصناعة فى مجال (الشركات الجارية والمصارف والبنوك وشركات التأمين وشركات النقل والتخليص الجمركى.
-                   </p>
+                    {{getLang()=='ar'?AboutUs.descriptionAr:AboutUs.description}}
+                    </p>
                </div>
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
